fix : The content is cutting off the card in width

--- a/styles.css
+++ b/styles.css
@@ -237,6 +237,7 @@
     overflow-y: auto;
     /* Make contentDiv scrollable if content overflows */
     padding-inline: 8px;
+    max-width: 100%;
 }
 
 .card-content blockquote {
